--- a/requirements.txt
+++ b/requirements.txt
@@ -10,8 +10,9 @@ botocore==1.15.3
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
+colorama==0.4.3
 conda==4.3.16
--e git://github.com/mdelhoneux/conllu.git@e71d7b7c737e5ae1a55e2b9cd14e09e415fd6e2e#egg=conllu
+conllu==2.3.2
 cycler==0.10.0
 cymem==2.0.3
 decorator==4.4.1
@@ -28,7 +29,6 @@ h5py==2.10.0
 idna==2.9
 imagesize==1.2.0
 importlib-metadata==1.5.0
-ipdb==0.12.3
 ipython==7.12.0
 ipython-genutils==0.2.0
 itsdangerous==1.1.0
@@ -71,6 +71,7 @@ pytz==2019.3
 regex==2020.2.18
 requests==2.23.0
 responses==0.10.9
+retrying==1.3.3
 ruamel.yaml==0.16.10
 ruamel.yaml.clib==0.2.0
 s3transfer==0.3.3
@@ -91,10 +92,12 @@ sphinxcontrib-serializinghtml==1.1.3
 sqlparse==0.3.0
 srsly==1.0.1
 tensorboardX==2.0
+termcolor==1.1.0
 thinc==7.0.8
 torch==1.4.0
 tqdm==4.43.0
 traitlets==4.3.3
+udapi==0.2.2
 Unidecode==1.1.1
 urllib3==1.25.8
 wasabi==0.6.0
